# example-empty-uv2

./: .gitignore  config_log.py  debug_info.py  main.py  pyproject.toml  reqs_all.txt  reqs_top.txt  start.bat  verify_implementation.py
ex_all_others/: closure_func.py  deep_copy_example.py  dis_async_await.py  dis_module.py  glob_mod.py  main_others.py  my_module.py  others_11.py  rich_print.py  sobes11.py  ssh1.py  trap_task.py
ex_code_war/: iadd_demo.py  main_code_war.py  split_strings.py  valid_bracket.py
ex_file_zip/: main_file.py  simple_zip.py  zip_config.py  zip_no_temp.py  zip_read_extract.py
ex_library/: main_library.py  my_stream_map.py  stream.py  stream_example.py  streamz_from_iterable.py  win32_gui_case.py
ex_metaclass/: call_dunder_meta.py  main_metaclass.py  metaclass_mul_call.py  noisy_meta.py  vars_inside_func.py
gem_crud_best/: config.py  database.py  dependencies.py  main.py  models.py  repository.py  schemas.py
