[project]
name = "example-empty-uv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "black>=25.0.0",
    "pywin32>=311",
    "rich==14.2.0",
    "sshtunnel==0.4.0",
    "streamz==0.6.5",
]



[tool.black]
line-length = 120
exclude = '''
/(
  # directories
  \.venv
  | venv
  | \.git
  | \.log
  | \.mypy_cache
  | \.tox
  | build
  | dist
)/
'''
